Install Express and body-parser

--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
   "bugs": {
     "url": "https://github.com/Altusha4/bmi_calculator/issues"
   },
-  "homepage": "https://github.com/Altusha4/bmi_calculator#readme"
+  "homepage": "https://github.com/Altusha4/bmi_calculator#readme",
+  "dependencies": {
+    "body-parser": "^2.2.1",
+    "express": "^5.2.1"
+  }
 }
